# regulatory-defi-compass-agent

./: Dockerfile  README.md  docker-compose.yml  langchain_config.yaml  langgraph.json  pyproject.toml  requirements.txt  run_server.py  server.py
src/agent/: __init__.py  agent.py  graph.py  main.py
src/tools/: compliance_scorer.py  defillama_client.py  llm_parser.py  opportunity_ranker.py  protocol_metadata.py
tests/: test_agent.py  test_simplified_agent.py
